@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16163: Make the importlib based version of pkgutil.iter_importers
+  work for submodules. Initial patch by Berker Peksag.
+
 - Issue #16804: Fix a bug in the 'site' module that caused running
   'python -S -m site' to incorrectly throw an exception.
 
